--- a/style.css
+++ b/style.css
@@ -9,5 +9,14 @@ header{
 section{
     background: white;
     border-radius: 10px;
+    padding: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 3px 3px 10px rgb(29, 190, 240);
     
+}
+footer{
+    color: white;
+    text-align: center;
+    font-style: italic;
 }
